syntax = "proto3";

package grpc;

service MesgProtocol {
  rpc Push (PushRequest) returns (PushResponse) {}
  rpc Pull (PullRequest) returns (stream PullResponse) {}
  rpc Commit (CommitRequest) returns (CommitResponse) {}
}

// Push
message PushRequest {
  string queue = 1;
  bytes data = 2;
}

message PushResponse {
  bool ack = 1;
}

// Pull
message PullRequest {
  string queue = 1;
  string application = 2;
}

message PullResponse {
  int64 id = 1;
  bytes data = 2;
}

// Commit 

message CommitRequest {
  int64 id = 1;
  
  string queue = 2;
  string application = 3;
}

message CommitResponse {
  bool success = 1;
}